Save workspace changes

--- a/index.html
+++ b/index.html
@@ -1,67 +1,149 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>SECS Sovereign</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SECS Sovereign — Substrate Execution & Continuity System</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container">
-      <a class="logo" href="/">SECS Sovereign</a>
-      <nav class="nav">
-        <a href="/doctrine.html">Doctrine</a>
-        <a href="/architecture.html">Architecture</a>
-        <a href="/pricing.html">Pricing</a>
-        <a href="/contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
+    <!-- ========================= -->
+    <!-- NAVIGATION -->
+    <!-- ========================= -->
+    <header class="site-header">
+        <nav class="nav">
+            <div class="nav-brand">SECS Sovereign</div>
+            <ul class="nav-links">
+                <li><a href="/doctrine.html">Doctrine</a></li>
+                <li><a href="/architecture.html">Architecture</a></li>
+                <li><a href="/pricing.html">Pricing</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <!-- ========================= -->
+    <!-- HERO SECTION -->
+    <!-- ========================= -->
     <section class="hero">
-      <div class="container hero-inner">
         <h1>SECS Sovereign</h1>
-        <p class="subtitle">The first Substrate Execution &amp; Continuity System.</p>
-        <p class="hero-cta">
-          <a class="btn" href="https://secscockpit.live" target="_blank" rel="noopener">View Cockpit</a>
-          <a class="btn outline" href="/pricing.html">Buy License</a>
+        <p class="subtitle">The first Substrate Execution & Continuity System.</p>
+        <p class="tagline">
+            A governed substrate for deterministic execution, zero‑drift telemetry, and narrative closure.
         </p>
-      </div>
+
+        <div class="hero-actions">
+            <a href="https://secscockpit.live" class="button primary">View Cockpit</a>
+            <a href="/pricing.html" class="button secondary">Buy License</a>
+        </div>
     </section>
 
-    <section class="container intro">
-      <h2>What is SECS Sovereign?</h2>
-      <p>SECS Sovereign is a deterministic substrate that guarantees execution continuity, observable telemetry, and governance-backed lanes for robust, auditable systems.</p>
 
-      <h3>Why SECS Exists</h3>
-      <p>To provide deterministic execution, zero-drift state assurances, and a mechanism for narrative closure across distributed systems.</p>
-
-      <h3>Architecture Overview</h3>
-      <p>A compact, extensible architecture balances governed and ungoverned lanes, telemetry, and continuity markers. Learn more on the <a href="/architecture.html">architecture</a> page.</p>
-
-      <h3>Live Observability</h3>
-      <p>Explore runtime telemetry and live dashboards at <a href="https://secscockpit.live" target="_blank" rel="noopener">secscockpit.live</a>.</p>
-
-      <h3>Pricing Preview</h3>
-      <p>Personal, Professional, and Enterprise licenses are available — see <a href="/pricing.html">pricing</a> for details.</p>
+    <!-- ========================= -->
+    <!-- WHAT IS SECS -->
+    <!-- ========================= -->
+    <section class="section what-is-secs">
+        <div class="container">
+            <h2>What is SECS Sovereign?</h2>
+            <p>
+                SECS Sovereign is a doctrine‑pluggable substrate that guarantees continuity across execution phases.
+                It enforces governed lanes, deterministic collapse paths, and telemetry‑backed propagation — all within
+                a zero‑drift runtime. SECS is not a framework or a library; it is a substrate that governs how systems
+                behave, evolve, and recover.
+            </p>
+        </div>
     </section>
-  </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <nav class="footer-nav">
-        <a href="/">Home</a>
-        <a href="/doctrine.html">Doctrine</a>
-        <a href="/architecture.html">Architecture</a>
-        <a href="/pricing.html">Pricing</a>
-        <a href="/contact.html">Contact</a>
-      </nav>
-      <p class="muted">© SECS Sovereign — All rights reserved.</p>
-    </div>
-  </footer>
 
-  <script src="assets/js/main.js"></script>
+    <!-- ========================= -->
+    <!-- WHY SECS EXISTS -->
+    <!-- ========================= -->
+    <section class="section why-secs-exists">
+        <div class="container">
+            <h2>Why SECS Exists</h2>
+            <p>
+                Distributed systems drift. Execution loses continuity. Governance becomes reactive instead of structural.
+                SECS Sovereign introduces a substrate that preserves state, enforces doctrine, and closes the narrative loop.
+            </p>
+
+            <ul class="feature-list">
+                <li><strong>Continuity as an invariant</strong> — execution never loses its story.</li>
+                <li><strong>Governed & ungoverned lanes</strong> — explicit separation of controlled and free execution.</li>
+                <li><strong>Telemetry daemon</strong> — real‑time propagation traces and continuity markers.</li>
+                <li><strong>Deterministic collapse paths</strong> — predictable rollback and recovery logic.</li>
+            </ul>
+        </div>
+    </section>
+
+
+    <!-- ========================= -->
+    <!-- ARCHITECTURE OVERVIEW -->
+    <!-- ========================= -->
+    <section class="section architecture-overview">
+        <div class="container">
+            <h2>Architecture Overview</h2>
+            <p>
+                The SECS substrate integrates the <strong>Governed Lane</strong>, <strong>Ungoverned Lane</strong>,
+                <strong>Telemetry Daemon</strong>, <strong>Orchestrator</strong>, and the <strong>Cockpit</strong>.
+                Together, these components form a continuity‑preserving execution environment that is observable,
+                deterministic, and doctrine‑aligned.
+            </p>
+
+            <a href="/architecture.html" class="button">Explore Architecture</a>
+        </div>
+    </section>
+
+
+    <!-- ========================= -->
+    <!-- LIVE OBSERVABILITY -->
+    <!-- ========================= -->
+    <section class="section live-observability">
+        <div class="container">
+            <h2>Live Observability</h2>
+            <p>
+                SECS Sovereign is a running substrate. View real‑time telemetry, propagation traces, and governed metrics
+                directly in the Cockpit.
+            </p>
+
+            <a href="https://secscockpit.live" class="button primary">Open Cockpit</a>
+        </div>
+    </section>
+
+
+    <!-- ========================= -->
+    <!-- LICENSE TIERS -->
+    <!-- ========================= -->
+    <section class="section license-tiers">
+        <div class="container">
+            <h2>License Tiers</h2>
+            <p>
+                SECS Sovereign is available in Personal, Professional, and Enterprise tiers. Each license unlocks cockpit
+                access, substrate bundles, and governed telemetry.
+            </p>
+
+            <a href="/pricing.html" class="button">View Pricing</a>
+        </div>
+    </section>
+
+
+    <!-- ========================= -->
+    <!-- FOOTER -->
+    <!-- ========================= -->
+    <footer class="site-footer">
+        <div class="container footer-content">
+            <nav class="footer-nav">
+                <a href="/doctrine.html">Doctrine</a>
+                <a href="/architecture.html">Architecture</a>
+                <a href="/pricing.html">Pricing</a>
+                <a href="/contact.html">Contact</a>
+            </nav>
+            <p class="footer-copy">&copy; 2026 SECS Sovereign. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
+
