Initial commit: Add SECS Sovereign landing page and assets

--- a/index.html
+++ b/index.html
@@ -55,29 +55,49 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-content">
-            <div class="text-rotator">
-                <div class="text-set active">
-                    <h1 class="glitch-text" data-text="FUTURE IS NOW">FUTURE IS NOW</h1>
-                    <p class="subtitle">Enter the next dimension of digital innovation</p>
-                </div>
-                <div class="text-set">
-                    <h1 class="glitch-text" data-text="BEYOND LIMITS">BEYOND LIMITS</h1>
-                    <p class="subtitle">Where technology meets infinite possibilities</p>
-                </div>
-                <div class="text-set">
-                    <h1 class="glitch-text" data-text="SECS Sovereign">SECS Sovereign</h1>
-                    <p class="subtitle">Powering tomorrow's digital revolution today</p>
-                </div>
+   <!-- Hero Section -->
+<section class="hero" id="home">
+    <div class="hero-content">
+        <div class="text-rotator">
+
+            <!-- 1 — Determinism -->
+            <div class="text-set active">
+                <h1 class="glitch-text" data-text="DETERMINISM IS HERE">DETERMINISM IS HERE</h1>
+                <p class="subtitle">Enter the substrate where outcomes are governed, not guessed</p>
             </div>
+
+            <!-- 2 — Propagation -->
+            <div class="text-set">
+                <h1 class="glitch-text" data-text="PROPAGATION IS TRUTH">PROPAGATION IS TRUTH</h1>
+                <p class="subtitle">Every tick is a trace, every trace a story, every story must close</p>
+            </div>
+
+            <!-- 3 — Zero Drift -->
+            <div class="text-set">
+                <h1 class="glitch-text" data-text="ZERO DRIFT">ZERO DRIFT</h1>
+                <p class="subtitle">No ambiguity, no decay — only governed continuity across all surfaces</p>
+            </div>
+
+            <!-- 4 — SECS Sovereign -->
+            <div class="text-set">
+                <h1 class="glitch-text" data-text="SECS SOVEREIGN">SECS SOVEREIGN</h1>
+                <p class="subtitle">A substrate built to express doctrine, not merely execute computation</p>
+            </div>
+
+            <!-- 5 — Ignition -->
+            <div class="text-set">
+                <h1 class="glitch-text" data-text="IGNITION IS NOW">IGNITION IS NOW</h1>
+                <p class="subtitle">From bare scaffold to lived history — the product is the propagation</p>
+            </div>
+
         </div>
-        <div class="cta-container">
-            <a href="#features" class="cta-button cta-primary">Get Started</a>
-            <a href="#about" class="cta-button cta-secondary">Learn More</a>
-        </div>
-    </section>
+    </div>
+
+    <div class="cta-container">
+        <a href="#features" class="cta-button cta-primary">Get Started</a>
+        <a href="#about" class="cta-button cta-secondary">Learn More</a>
+    </div>
+</section>
 
     <!-- Features Section with Tabs -->
     <section class="features" id="features">
