Secondary commit: Ad SECS Sovereign landing page and assets additional

--- a/index.html
+++ b/index.html
@@ -116,84 +116,171 @@
 <section class="capabilities-scroll" id="features">
     <h2 class="section-title">Sovereign Capabilities</h2>
 
-    <div class="scroll-container">
-        <!-- Card 1 -->
-        <div class="capability-card">
-            <h3 class="card-title">⚡ Deterministic Performance</h3>
-            <ul class="feature-list">
-                <li>Deterministic execution paths</li>
-                <li>Continuity‑preserving compute cycles</li>
-                <li>Predictable propagation latency</li>
-                <li>Trace‑anchored performance guarantees</li>
-            </ul>
-            <p class="feature-blurb">
-                SECS Sovereign executes with governed precision. No randomness, no drift —
-                every operation follows a traceable, reproducible path through the substrate.
-            </p>
-        </div>
+    <div class="scroll-wrapper">
+        <div class="scroll-track">
+<div class="capability-card">
+    <h3 class="card-title">🛡️ Anonymised Data Surfaces</h3>
+    <ul class="feature-list">
+        <li>Identity‑neutral data handling</li>
+        <li>Continuity‑preserving anonymisation</li>
+        <li>Governed boundary redaction</li>
+        <li>Invariant‑safe data exposure</li>
+    </ul>
+    <p class="feature-blurb">
+        SECS Sovereign treats anonymisation as a structural invariant, not a configuration toggle.
+        Data entering or leaving the substrate is stripped of identity markers through governed,
+        continuity‑preserving processes that protect truth‑conditions without leaking lineage.
+        Anonymity becomes a first‑class property of the system’s propagation model.
+    </p>
+</div>
+            <!-- Card 1 -->
+            <div class="capability-card">
+                <h3 class="card-title">⚡ Deterministic Performance</h3>
+                <ul class="feature-list">
+                    <li>Deterministic execution paths</li>
+                    <li>Continuity‑preserving compute cycles</li>
+                    <li>Predictable propagation latency</li>
+                    <li>Trace‑anchored performance guarantees</li>
+                </ul>
+                <p class="feature-blurb">
+                    SECS Sovereign executes with governed precision. No randomness, no drift —
+                    every operation follows a traceable, reproducible path through the substrate.
+                </p>
+            </div>
 
-        <!-- Card 2 -->
-        <div class="capability-card">
-            <h3 class="card-title">🔒 Governed Security</h3>
-            <ul class="feature-list">
-                <li>Doctrine‑pluggable governance layers</li>
-                <li>Immutable state transitions</li>
-                <li>Truth‑condition enforcement at every boundary</li>
-                <li>Continuity‑aware anomaly detection</li>
-                <li>Zero‑trust substrate architecture</li>
-            </ul>
-            <p class="feature-blurb">
-                Security is not an add‑on — it is a doctrinal invariant. Every action, state,
-                and transition is governed, validated, and anchored in truth‑conditions.
-            </p>
-        </div>
+            <!-- Card 2 -->
+            <div class="capability-card">
+                <h3 class="card-title">🔒 Governed Security</h3>
+                <ul class="feature-list">
+                    <li>Doctrine‑pluggable governance layers</li>
+                    <li>Immutable state transitions</li>
+                    <li>Truth‑condition enforcement at every boundary</li>
+                    <li>Continuity‑aware anomaly detection</li>
+                    <li>Zero‑trust substrate architecture</li>
+                </ul>
+                <p class="feature-blurb">
+                    Security is not an add‑on — it is a doctrinal invariant. Every action, state,
+                    and transition is governed, validated, and anchored in truth‑conditions.
+                </p>
+            </div>
 
-        <!-- Card 3 -->
-        <div class="capability-card">
-            <h3 class="card-title">🌐 Continuity Network</h3>
-            <ul class="feature-list">
-                <li>Continuity‑preserving routing</li>
-                <li>Propagation‑aware synchronization</li>
-                <li>Cross‑surface determinism guarantees</li>
-                <li>Distributed substrate coherence</li>
-                <li>Fault‑tolerant continuity channels</li>
-            </ul>
-            <p class="feature-blurb">
-                A substrate‑level network designed for continuity, not chaos.
-                Every node participates in the same governed propagation model.
-            </p>
-        </div>
+            <!-- Card 3 -->
+            <div class="capability-card">
+                <h3 class="card-title">🌐 Continuity Network</h3>
+                <ul class="feature-list">
+                    <li>Continuity‑preserving routing</li>
+                    <li>Propagation‑aware synchronization</li>
+                    <li>Cross‑surface determinism guarantees</li>
+                    <li>Distributed substrate coherence</li>
+                    <li>Fault‑tolerant continuity channels</li>
+                </ul>
+                <p class="feature-blurb">
+                    A substrate‑level network designed for continuity, not chaos.
+                    Every node participates in the same governed propagation model.
+                </p>
+            </div>
 
-        <!-- Card 4 -->
-        <div class="capability-card">
-            <h3 class="card-title">📊 Propagation Analytics</h3>
-            <ul class="feature-list">
-                <li>Propagation trace introspection</li>
-                <li>Continuity‑phase classification</li>
-                <li>Substrate telemetry overlays</li>
-                <li>Doctrine‑aligned signal extraction</li>
-                <li>Narrative closure diagnostics</li>
-            </ul>
-            <p class="feature-blurb">
-                Analytics in SECS Sovereign is not reporting — it is the study of propagation itself.
-                Every tick becomes a story, every story becomes lived history.
-            </p>
-        </div>
+            <!-- Card 4 -->
+            <div class="capability-card">
+                <h3 class="card-title">📊 Propagation Analytics</h3>
+                <ul class="feature-list">
+                    <li>Propagation trace introspection</li>
+                    <li>Continuity‑phase classification</li>
+                    <li>Substrate telemetry overlays</li>
+                    <li>Doctrine‑aligned signal extraction</li>
+                    <li>Narrative closure diagnostics</li>
+                </ul>
+                <p class="feature-blurb">
+                    Analytics in SECS Sovereign is not reporting — it is the study of propagation itself.
+                    Every tick becomes a story, every story becomes lived history.
+                </p>
+            </div>
 
-        <!-- Card 5 -->
-        <div class="capability-card">
-            <h3 class="card-title">🔧 Doctrine Integration</h3>
-            <ul class="feature-list">
-                <li>Doctrine‑aligned interface contracts</li>
-                <li>Propagation‑safe event ingestion</li>
-                <li>Continuity‑aware adapters</li>
-                <li>Substrate‑level interoperability</li>
-                <li>Governed integration surfaces</li>
-            </ul>
-            <p class="feature-blurb">
-                Integration is not about APIs — it is about aligning external systems
-                with the Sovereign substrate’s invariants and truth‑conditions.
-            </p>
+            <!-- Card 5 -->
+            <div class="capability-card">
+                <h3 class="card-title">🔧 Doctrine Integration</h3>
+                <ul class="feature-list">
+                    <li>Doctrine‑aligned interface contracts</li>
+                    <li>Propagation‑safe event ingestion</li>
+                    <li>Continuity‑aware adapters</li>
+                    <li>Substrate‑level interoperability</li>
+                    <li>Governed integration surfaces</li>
+                </ul>
+                <p class="feature-blurb">
+                    Integration is not about APIs — it is about aligning external systems
+                    with the Sovereign substrate’s invariants and truth‑conditions.
+                </p>
+            </div>
+            <div class="capability-card">
+    <h3 class="card-title">🧩 Substrate Orchestration</h3>
+    <ul class="feature-list">
+        <li>Governed multi‑surface coordination</li>
+        <li>Deterministic operation sequencing</li>
+        <li>Continuity‑safe orchestration flows</li>
+        <li>Invariant‑preserving execution order</li>
+    </ul>
+    <p class="feature-blurb">
+        SECS Sovereign orchestrates operations as governed sequences, not ad‑hoc events.
+        Every action is placed in a continuity‑preserving order that maintains coherence
+        across all surfaces of the substrate.
+    </p>
+</div>
+<div class="capability-card">
+    <h3 class="card-title">🌀 Collapse Path Governance</h3>
+    <ul class="feature-list">
+        <li>Deterministic collapse trajectories</li>
+        <li>Truth‑aligned failure modes</li>
+        <li>Continuity‑anchored rollback logic</li>
+        <li>Predictable boundary behavior</li>
+    </ul>
+    <p class="feature-blurb">
+        Collapse is not chaos — it is a governed phase of the system. SECS Sovereign ensures
+        that every failure path is deterministic, traceable, and aligned with the substrate’s
+        truth‑conditions, eliminating ambiguity even under stress.
+    </p>
+</div>
+<div class="capability-card">
+    <h3 class="card-title">🔗 Doctrine‑Aligned Interfaces</h3>
+    <ul class="feature-list">
+        <li>Continuity‑aware API surfaces</li>
+        <li>Propagation‑safe input boundaries</li>
+        <li>Invariant‑preserving adapters</li>
+        <li>Governed external integration points</li>
+    </ul>
+    <p class="feature-blurb">
+        Interfaces in SECS Sovereign are not generic endpoints — they are doctrine‑aligned
+        boundaries that enforce continuity and truth‑conditions before any external signal
+        enters the substrate.
+    </p>
+</div>
+<div class="capability-card">
+    <h3 class="card-title">📡 Substrate Telemetry (Coming Soon)</h3>
+    <ul class="feature-list">
+        <li>Propagation‑phase introspection</li>
+        <li>Continuity‑aware signal mapping</li>
+        <li>Doctrine‑aligned metric surfaces</li>
+        <li>Narrative‑grade system visibility</li>
+    </ul>
+    <p class="feature-blurb">
+        A forthcoming layer of SECS Sovereign will expose governed telemetry surfaces —
+        not as analytics, but as propagation truth‑maps. This layer will reveal continuity,
+        drift‑resistance, and substrate behavior with doctrinal clarity.
+    </p>
+</div>
+<div class="capability-card">
+    <h3 class="card-title">🧬 Substrate Identity</h3>
+    <ul class="feature-list">
+        <li>Immutable substrate fingerprint</li>
+        <li>Continuity‑anchored identity markers</li>
+        <li>Cross‑surface coherence guarantees</li>
+        <li>Deterministic lineage tracking</li>
+    </ul>
+    <p class="feature-blurb">
+        Every instance of SECS Sovereign carries a governed identity — a continuity‑anchored
+        fingerprint that ensures coherence across surfaces, deployments, and propagation events.
+        Identity becomes a structural invariant, not a configuration detail.
+    </p>
+</div>
         </div>
     </div>
 </section>
@@ -336,5 +423,39 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 <script src="assets/js/main.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const wrapper = document.querySelector('.scroll-wrapper');
+    const track = document.querySelector('.scroll-track');
+
+    // Duplicate cards
+    const originalWidth = track.scrollWidth;
+    track.innerHTML += track.innerHTML;
+
+    let isUserScrolling = false;
+    let scrollTimeout;
+
+    wrapper.addEventListener('scroll', () => {
+        isUserScrolling = true;
+
+        // Clear previous timeout
+        clearTimeout(scrollTimeout);
+
+        // Detect when user stops scrolling
+        scrollTimeout = setTimeout(() => {
+            isUserScrolling = false;
+
+            // Only reset when user is NOT scrolling
+            if (wrapper.scrollLeft >= originalWidth) {
+                const currentBehavior = wrapper.style.scrollBehavior;
+                wrapper.style.scrollBehavior = "auto";   // disable smooth scroll
+                wrapper.scrollLeft = wrapper.scrollLeft - originalWidth;
+                wrapper.style.scrollBehavior = currentBehavior; // restore smooth scroll
+            }
+        }, 80); // small delay to detect scroll stop
+    });
+});
+</script>
+
 </body>
 </html>
